--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,11 @@ sudo: required
 services:
   - docker
 
-cache: bundler
-
-before_install:
+install:
   - bash docker/build
+
+before_script:
+  - gem install rake
 
 script:
   - rake
