feat: test build on travis (#3)
* feat(index): style feeds a bit nicer and add global no-referrer setting

* fix: errors in log about tty

solution: let rerun run in the background.

* feat: test build on travis

* avoid full ruby setup

* do not install docker-ce update

* can't skip bundle install apparently, so at least cache bundler's gems

* .

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,14 @@ sudo: required
 services:
   - docker
 
-addons:
-  apt:
-    packages:
-      - docker-ce
-
-before_install:
+install:
   - bash docker/build
+
+before_script:
+  - gem install rake
+
+script:
+  - rake
 
 deploy:
   provider: script
