--- a/config/feeds.yml
+++ b/config/feeds.yml
@@ -1,49 +1,4 @@
-# This is config is for demonstration only.
-# FYI: Github provides an atom feed for releases of every project.
-# You should directly subscribe to that feed. :)
----
 headers:
-  'User-Agent': "Mozilla/5.0 (iPhone; CPU iPhone OS 10_3_1 like Mac OS X) AppleWebKit/603.1.30 (KHTML, like Gecko) Version/10.0 Mobile/14E304 Safari/602.1"
+  'User-Agent': "Mozilla/5.0 (Macintosh; Intel Mac OS X 10.14; rv:67.0) Gecko/20100101 Firefox/67.0"
 feeds:
-  nuxt-releases:
-    channel:
-      title: 'Nuxt.js Github Releases'
-      url: https://github.com/nuxt/nuxt.js/releases
-      ttl: 60
-      description: 'An example config.'
-    selectors:
-      items:
-        selector: '.release'
-      title:
-        selector: '.release-header .text-normal a'
-        post_process:
-          name: 'template'
-          string: '%s (%s)'
-          methods:
-            - self
-            - author
-      author:
-        selector: '.avatar'
-        extractor: 'attribute'
-        attribute: 'alt'
-        post_process:
-          name: substring
-          start: 1
-      link:
-        selector: '.release-header a'
-        extractor: 'href'
-        post_process:
-          name: 'parse_uri'
-      description:
-        selector: '.markdown-body'
-        extractor: 'html'
-        post_process:
-          name: 'sanitize_html'
-      # categories:
-      #   selector: '.Label'
-      updated:
-        selector: 'relative-time'
-        extractor: 'attribute'
-        attribute: 'datetime'
-        post_process:
-          name: 'parse_time'
+  # your custom feeds go here
