--- a/config/feeds.yml
+++ b/config/feeds.yml
@@ -1,4 +1,8 @@
 headers:
   'User-Agent': "Mozilla/5.0 (Macintosh; Intel Mac OS X 10.14; rv:67.0) Gecko/20100101 Firefox/67.0"
 feeds:
-  # your custom feeds go here
+  # your custom feeds go here:
+  # mysite:
+  #   channel:
+  #     url:
+  #   selectors:
