--- a/docker/build
+++ b/docker/build
@@ -1,4 +1,4 @@
 #!/bin/bash
 set -e
 
-docker build -t gilcreator/html2rss-web -f Dockerfile .
+docker build --no-cache -t gilcreator/html2rss-web -f Dockerfile .
