--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "html2rss-web",
-  "description": "Returns scraped websites as RSS feed via http. Comes with the latest html2rss-configs included.",
+  "description": "Builds RSS feeds from websites. Comes with many html2rss-configs included.",
   "website": "https://github.com/gildesmarais/html2rss-web",
   "env": {
     "RACK_ENV": "production"
