--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_script:
   - gem install rake
 
 script:
+  - bundle exec rubocop -F
   - docker run --rm -i hadolint/hadolint < Dockerfile
   - rake
 
