chore: setup rubocop (#37)
* chore: setup rubocop

add config
run on ci
autocorrect

* bundle

* try caching bundle on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,17 @@ sudo: required
 services:
   - docker
 
+cache: bundler
+
 install:
   - bash docker/build
 
 before_script:
   - gem install rake
+  - bundle
 
 script:
+  - bundle exec rubocop -F
   - docker run --rm -i hadolint/hadolint < Dockerfile
   - rake
 
