--- a/config/feeds.yml
+++ b/config/feeds.yml
@@ -1,3 +1,7 @@
+stylesheets:
+  - href: '/rss.xsl'
+    media: 'all'
+    type: 'text/xsl'
 headers:
   "User-Agent": "Mozilla/5.0 (Windows NT 10.0; rv:68.0) Gecko/20100101 Firefox/68.0"
 feeds:
