--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,8 +1,17 @@
 pull_request_rules:
   - name: automatic merge for Dependabot pull requests
     conditions:
-      - author=dependabot-preview[bot]
+      - author=dependabot[bot]
       - status-success=Travis CI - Pull Request
+    actions:
+      merge:
+        method: squash
+        strict: smart
+  - name: automatic merge for bundle update pull requests
+    conditions:
+      - author=github-actions[bot]
+      - status-success=Travis CI - Pull Request
+      - title~=bundle update \d{8}_\d{6}
     actions:
       merge:
         method: squash
