--- a/.github/workflows/test_build_push.yml
+++ b/.github/workflows/test_build_push.yml
@@ -31,7 +31,7 @@ jobs:
       - run: |
           bundle exec rake
 
-  docker:
+  docker-push:
     if: ${{ github.ref == 'refs/heads/master' }}
     needs:
       - docker-test
