fix(ci): missing git checkout in docker-push job

--- a/.github/workflows/test_build_push.yml
+++ b/.github/workflows/test_build_push.yml
@@ -39,6 +39,7 @@ jobs:
       - ruby
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - run: docker/build
 
       - run: docker/push
