--- a/.mergify.yml
+++ b/.mergify.yml
@@ -2,7 +2,10 @@ pull_request_rules:
   - name: automatic merge for Dependabot pull requests
     conditions:
       - author=dependabot[bot]
-      - status-success=Travis CI - Pull Request
+      - status-success=docker-test
+      - status-success=hadolint
+      - status-success=ruby
+      - base=master
     actions:
       merge:
         method: squash
@@ -10,7 +13,10 @@ pull_request_rules:
   - name: automatic merge for bundle update pull requests
     conditions:
       - author=github-actions[bot]
-      - status-success=Travis CI - Pull Request
+      - status-success=docker-test
+      - status-success=hadolint
+      - status-success=ruby
+      - base=master
       - title~=bundle update \d{8}_\d{6}
     actions:
       merge:
