add more/newly added files to .dockerignore

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,18 @@
 .bundle/
+.byebug_history
 .DS_Store
 .git/
 .github/
+.mergify.yml
+.rspec
+.rubocop.yml
+.ruby-version
+.yardoc/
 app.json
-docker/
+bin/
+coverage/
+Procfile
+Rakefile
+renovate.json
+spec/
 work/
