--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,24 +1,18 @@
-pull_request_rules:
-  - name: automatic merge for Dependabot pull requests
+queue_rules:
+  - name: dependabot
     conditions:
       - author=dependabot[bot]
       - status-success=docker-test
       - status-success=hadolint
       - status-success=ruby
       - base=master
-    actions:
-      merge:
-        method: squash
-        strict: smart
-  - name: automatic merge for bundle update pull requests
+      
+pull_request_rules:
+  - name: automatic merge for Dependabot pull requests
     conditions:
-      - author=github-actions[bot]
-      - status-success=docker-test
-      - status-success=hadolint
-      - status-success=ruby
-      - base=master
-      - title~=bundle update \d{8}_\d{6}
+      - author=dependabot[bot]
     actions:
-      merge:
+      queue:
         method: squash
-        strict: smart
+        name: dependabot
+        
