--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,8 @@ updates:
     time: "22:00"
   open-pull-requests-limit: 10
   versioning-strategy: increase-if-necessary
+  allow:
+    - dependency-type: production
 - package-ecosystem: docker
   directory: "/"
   schedule:
