feat(docker): use multilayer build to cut image size in half
Signed-off-by: Gil Desmarais <git@desmarais.de>

--- a/.dockerignore
+++ b/.dockerignore
@@ -7,11 +7,13 @@
 .rspec
 .rubocop.yml
 .ruby-version
+.ruby-lsp/
 .yardoc/
 app.json
 bin/
 coverage/
 docs/
+Dockerfile
 Procfile
 Rakefile
 renovate.json
