fix: example feed in config/feeds.yml broken

--- a/config/feeds.yml
+++ b/config/feeds.yml
@@ -13,9 +13,9 @@ feeds:
       ttl: 120
     selectors:
       items:
-        selector: "ol > li > div"
+        selector: "li > div"
       title:
-        selector: "p"
+        selector: "h4"
       link:
         selector: "a"
         extractor: "href"
