refactor: improve readability of docs and code performance
Signed-off-by: Gil Desmarais <git@desmarais.de>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,3 +12,6 @@ Metrics/BlockLength:
     - Rakefile
   ExcludedMethods:
     - route
+
+Naming/RescuedExceptionsVariableName:
+  PreferredName: error
