feat: improve structure of app to follow more Roda conventions
Signed-off-by: Gil Desmarais <git@desmarais.de>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -18,3 +18,7 @@ Naming/RescuedExceptionsVariableName:
 
 Layout/ClassStructure:
   Enabled: true
+
+Style/Documentation:
+  AllowedConstants:
+    - App
