--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,7 @@ require:
   - rubocop-performance
   - rubocop-rspec
   - rubocop-rake
+  - rubocop-thread_safety
 
 AllCops:
   DisplayCopNames: true
@@ -18,3 +19,12 @@ Naming/RescuedExceptionsVariableName:
 
 Layout/ClassStructure:
   Enabled: true
+
+Style/Documentation:
+  AllowedConstants:
+    - App
+
+RSpec/SpecFilePathFormat:
+  Exclude:
+    - 'spec/html2rss/web/app/*_spec.rb'
+    - 'spec/html2rss/web/app/health_check/auth_spec.rb'
