--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,7 +11,7 @@ AllCops:
 Metrics/BlockLength:
   Exclude:
     - Rakefile
-  ExcludedMethods:
+  AllowedMethods:
     - route
 
 Naming/RescuedExceptionsVariableName:
