feat(deps): use html2rss in latest development status
Signed-off-by: Gil Desmarais <git@desmarais.de>

--- a/config/feeds.yml
+++ b/config/feeds.yml
@@ -16,6 +16,6 @@ feeds:
         selector: "li > div"
       title:
         selector: "h4"
-      link:
+      url:
         selector: "a"
         extractor: "href"
