--- a/.github/workflows/test_build_push.yml
+++ b/.github/workflows/test_build_push.yml
@@ -44,7 +44,7 @@ jobs:
           bundle exec rake
 
   docker-push:
-    if: ${{ github.ref == 'refs/heads/master' }}
+    # if: ${{ github.ref == 'refs/heads/master' }}
     needs:
       - docker-test
       - hadolint
