--- a/.github/workflows/test_build_push.yml
+++ b/.github/workflows/test_build_push.yml
@@ -55,6 +55,7 @@ jobs:
       packages: write
     env:
       IMAGE_NAME: gilcreator/html2rss-web
+      TAG_SHA: ${{ github.sha }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -65,18 +66,11 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # - name: Log in to DockerHub
-      #   uses: docker/login-action@v3
-      #   with:
-      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
-      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      # - name: Log in to GitHub Container Registry (GHCR)
-      #   uses: docker/login-action@v3
-      #   with:
-      #     registry: ghcr.io
-      #     username: ${{ github.actor }}
-      #     password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Log in to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Cache Docker layers
         uses: actions/cache@v4
@@ -93,7 +87,7 @@ jobs:
           push: false
           tags: |
             gilcreator/html2rss-web:latest
-            ghcr.io/${{ github.repository_owner }}/html2rss-web:latest
+            gilcreator/html2rss-web:${{ github.sha }}
           platforms: linux/amd64,linux/arm64
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
@@ -109,7 +103,7 @@ jobs:
       - name: Generate SBOM
         uses: anchore/sbom-action@v0.20.1
         with:
-          image: gilcreator/html2rss-web:latest
+          image: gilcreator/html2rss-web:${{ github.sha }}
           output-file: sbom.spdx.json
 
       - name: Upload SBOM Artifact
