--- a/.github/workflows/test_build_push.yml
+++ b/.github/workflows/test_build_push.yml
@@ -69,6 +69,12 @@ jobs:
       - name: Get Git commit timestamps
         run: echo "TIMESTAMP=$(git log -1 --pretty=%ct)" >> $GITHUB_ENV
 
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.IMAGE_NAME }}
+
       - name: Log in to DockerHub
         uses: docker/login-action@v3
         with:
@@ -93,10 +99,12 @@ jobs:
           tags: |
             gilcreator/html2rss-web:latest
             gilcreator/html2rss-web:${{ github.sha }}
+            ${{ steps.meta.outputs.tags }}
           platforms: linux/amd64,linux/arm64
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
           provenance: true
+          sbom: true
           labels: |
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
             org.opencontainers.image.created=${{ github.event.head_commit.timestamp }}
@@ -104,18 +112,6 @@ jobs:
             org.opencontainers.image.title=html2rss-web
             org.opencontainers.image.description=Generates RSS feeds of any website & serves to the web!
             org.opencontainers.image.sbom=https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts
-
-      - name: Generate SBOM
-        uses: anchore/sbom-action@v0.20.1
-        with:
-          image: gilcreator/html2rss-web:${{ github.sha }}
-          output-file: sbom.spdx.json
-
-      - name: Upload SBOM Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: sbom
-          path: sbom.spdx.json
 
       - name: Move updated cache into place
         run: |
