--- a/.github/workflows/test_build_push.yml
+++ b/.github/workflows/test_build_push.yml
@@ -21,6 +21,34 @@ jobs:
       - run: bundle exec rubocop -F
       - run: bundle exec yard doc --fail-on-warning --no-output
 
+  frontend:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: frontend/package-lock.json
+
+      - name: Install frontend dependencies
+        run: |
+          cd frontend
+          npm ci
+
+      - name: Build frontend
+        run: |
+          cd frontend
+          npm run build
+
+      - name: Verify build output
+        run: |
+          ls -la frontend/dist/
+          test -f frontend/dist/index.html
+          test -f frontend/dist/gallery/index.html
+
   rspec:
     runs-on: ubuntu-latest
     steps:
@@ -33,13 +61,27 @@ jobs:
       - run: bundle exec rspec
 
   docker-test:
-    needs: hadolint
+    needs: [hadolint, frontend]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
       - uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
+      - name: Setup Node.js for Docker build
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: frontend/package-lock.json
+      - name: Install frontend dependencies
+        run: |
+          cd frontend
+          npm ci
+      - name: Build frontend
+        run: |
+          cd frontend
+          npm run build
       - run: |
           bundle exec rake
 
@@ -49,6 +91,7 @@ jobs:
       - docker-test
       - hadolint
       - ruby
+      - frontend
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -59,6 +102,23 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
+
+      - name: Setup Node.js for Docker build
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: frontend/package-lock.json
+
+      - name: Install frontend dependencies
+        run: |
+          cd frontend
+          npm ci
+
+      - name: Build frontend
+        run: |
+          cd frontend
+          npm run build
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
