--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -55,15 +55,32 @@ jobs:
           cache: "npm"
           cache-dependency-path: frontend/package-lock.json
 
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          bundler-cache: true
+
       - name: Install dependencies
         run: |
           cd frontend
           npm ci
+          cd ..
+          bundle install
 
       - name: Check for vulnerabilities
         run: |
           cd frontend
           npm audit --audit-level=moderate
+
+      - name: Run unit tests
+        run: |
+          cd frontend
+          npm run test:unit
+
+      - name: Run integration tests
+        run: |
+          cd frontend
+          npm run test:integration
 
       - name: Build and verify
         run: |
