--- a/.github/workflows/test_build_push.yml
+++ b/.github/workflows/test_build_push.yml
@@ -33,10 +33,22 @@ jobs:
           cache: "npm"
           cache-dependency-path: frontend/package-lock.json
 
-      - name: Install frontend dependencies
+      - name: Setup Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          bundler-cache: true
+
+      - name: Install dependencies
         run: |
           cd frontend
           npm ci
+          cd ..
+          bundle install
+
+      - name: Run frontend tests
+        run: |
+          cd frontend
+          npm run test:ci
 
       - name: Build frontend
         run: |
