--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,8 +2,9 @@
   "name": "html2rss-frontend",
   "type": "module",
   "scripts": {
+    "dev": "astro dev --port 3001 --host",
     "build": "astro build",
-    "dev": "astro dev",
+    "preview": "astro preview",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "test": "vitest",
