--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,7 @@
     "test:ci": "npm run test:unit && npm run test:integration"
   },
   "dependencies": {
-    "astro": "^4.0.0",
-    "@astrojs/node": "^8.0.0"
+    "astro": "^4.0.0"
   },
   "devDependencies": {
     "prettier": "^3.x.x",
