--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "test:ci": "npm run test:unit && npm run test:integration"
   },
   "dependencies": {
-    "astro": "^4.0.0"
+    "@astrojs/starlight": "^0.35.3",
+    "astro": "^5.13.8",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "prettier": "^3.x.x",
