slim frontend, add ux-friendly autosource auth using hmac + docs

--- a/config/feeds.yml
+++ b/config/feeds.yml
@@ -1,9 +1,26 @@
+auth:
+  accounts:
+    - username: "allow-every-url"
+      token: "allow-any-urls-abcd"
+      allowed_urls:
+        - "*" # Full access
+    - username: "limited"
+      token: "limited-urls-token"
+      allowed_urls:
+        - "https://example.com/*"
+        - "https://news.ycombinator.com/*"
+    - username: "health-check"
+      token: "health-check-token-xyz789"
+      allowed_urls: [] # Health check doesn't need URL access
+
 stylesheets:
   - href: "/rss.xsl"
     media: "all"
     type: "text/xsl"
+
 headers:
   "User-Agent": "Mozilla/5.0 (Windows NT 10.0) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/108.0.0.0 Safari/537.36"
+
 feeds:
   # your custom feeds go here:
   example:
