--- a/.github/workflows/test_build_push.yml
+++ b/.github/workflows/test_build_push.yml
@@ -16,6 +16,7 @@ jobs:
 
       - uses: ruby/setup-ruby@v1
         with:
+          ruby-version-file: '.tool-versions'
           bundler-cache: true
 
       - run: bundle exec rubocop -F
@@ -29,13 +30,14 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version-file: '.tool-versions'
           cache: "npm"
           cache-dependency-path: frontend/package-lock.json
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
+          ruby-version-file: '.tool-versions'
           bundler-cache: true
 
       - name: Install dependencies
@@ -68,6 +70,7 @@ jobs:
 
       - uses: ruby/setup-ruby@v1
         with:
+          ruby-version-file: '.tool-versions'
           bundler-cache: true
 
       - run: bundle exec rspec
@@ -79,11 +82,12 @@ jobs:
       - uses: actions/checkout@v5
       - uses: ruby/setup-ruby@v1
         with:
+          ruby-version-file: '.tool-versions'
           bundler-cache: true
       - name: Setup Node.js for Docker build
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version-file: '.tool-versions'
           cache: "npm"
           cache-dependency-path: frontend/package-lock.json
       - name: Install frontend dependencies
@@ -118,7 +122,7 @@ jobs:
       - name: Setup Node.js for Docker build
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
+          node-version-file: '.tool-versions'
           cache: "npm"
           cache-dependency-path: frontend/package-lock.json
 
