--- a/config/feeds.yml
+++ b/config/feeds.yml
@@ -4,11 +4,12 @@ auth:
       token: "allow-any-urls-abcd"
       allowed_urls:
         - "*" # Full access
-    - username: "limited"
-      token: "limited-urls-token"
+    - username: "demo"
+      token: "self-host-for-full-access"
       allowed_urls:
-        - "https://example.com/*"
-        - "https://news.ycombinator.com/*"
+        - "https://www.chip.de/testberichte"
+        - "https://news.ycombinator.com"
+        - "https://github.com/trending"
     - username: "health-check"
       token: "health-check-token-xyz789"
       allowed_urls: [] # Health check doesn't need URL access
