--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,16 @@
     "test:ci": "npm run test:unit && npm run test:integration"
   },
   "dependencies": {
+    "@astrojs/preact": "^4.0.0",
     "@astrojs/starlight": "^0.35.3",
     "astro": "^5.13.8",
+    "preact": "^10.19.0",
     "tslib": "^2.8.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/preact": "^3.2.4",
+    "jsdom": "^27.0.0",
     "prettier": "^3.x.x",
     "prettier-plugin-astro": "^0.x.x",
     "vitest": "^1.0.0"
