--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,7 @@ services:
     environment:
       RACK_ENV: production
       HTML2RSS_SECRET_KEY: your-generated-secret-key-here
-      HEALTH_CHECK_USERNAME: health
-      HEALTH_CHECK_PASSWORD: please-set-YOUR-OWN-veeeeeery-l0ng-aNd-h4rd-to-gue55-Passw0rd!
+      HEALTH_CHECK_TOKEN: health-check-token-xyz789
       BROWSERLESS_IO_WEBSOCKET_URL: ws://browserless:3001
       BROWSERLESS_IO_API_TOKEN: 6R0W53R135510
 
