--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,10 @@
     "format:check": "prettier --check .",
     "test": "vitest",
     "test:run": "vitest run",
-    "test:unit": "vitest run --reporter=verbose --exclude='**/*integration*.test.js'",
-    "test:integration": "node scripts/test-with-server.cjs",
-    "test:ci": "npm run test:unit && npm run test:integration"
+    "test:unit": "vitest run --reporter=verbose --config vitest.unit.config.ts",
+    "test:contract": "vitest run --reporter=verbose --config vitest.contract.config.ts",
+    "test:ci": "npm run test:unit && npm run test:contract",
+    "test:smoke": "playwright test"
   },
   "dependencies": {
     "@astrojs/preact": "^4.0.0",
@@ -24,9 +25,11 @@
     "tslib": "^2.8.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.55.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/preact": "^3.2.4",
     "jsdom": "^27.0.0",
+    "msw": "^2.11.3",
     "prettier": "^3.x.x",
     "prettier-plugin-astro": "^0.x.x",
     "vitest": "^1.0.0"
