--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,21 @@
-name: test, docker build & push
+name: CI
 
-on: [push]
+on:
+  push:
+  pull_request:
+  workflow_dispatch:
+
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   hadolint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
-      - run: docker run --rm -i hadolint/hadolint < Dockerfile
+      - name: Lint Dockerfile
+        run: docker run --rm -i hadolint/hadolint < Dockerfile
 
   ruby:
     runs-on: ubuntu-latest
@@ -16,64 +24,17 @@ jobs:
 
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version-file: '.tool-versions'
+          ruby-version-file: ".tool-versions"
           bundler-cache: true
 
-      - run: bundle exec rubocop -F
-      - run: bundle exec yard doc --fail-on-warning --no-output
+      - name: Run RuboCop
+        run: bundle exec rubocop -F
 
-  frontend:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v5
+      - name: Verify Yard documentation
+        run: bundle exec yard doc --fail-on-warning --no-output
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: '.tool-versions'
-          cache: "npm"
-          cache-dependency-path: frontend/package-lock.json
-
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version-file: '.tool-versions'
-          bundler-cache: true
-
-      - name: Install dependencies
-        run: |
-          cd frontend
-          npm ci
-          cd ..
-          bundle install
-
-      - name: Run frontend tests
-        run: |
-          cd frontend
-          npm run test:ci
-
-      - name: Build frontend
-        run: |
-          cd frontend
-          npm run build
-
-      - name: Verify build output
-        run: |
-          ls -la frontend/dist/
-          test -f frontend/dist/index.html
-          test -f frontend/dist/gallery/index.html
-
-  rspec:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v6
-
-      - uses: ruby/setup-ruby@v1
-        with:
-          ruby-version-file: '.tool-versions'
-          bundler-cache: true
-
-      - run: bundle exec rspec
+      - name: Run RSpec
+        run: bundle exec rspec
 
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
@@ -83,39 +44,73 @@ jobs:
           path: coverage/
           retention-days: 30
 
-  docker-test:
-    needs: [hadolint, frontend]
+  frontend:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: frontend
     steps:
       - uses: actions/checkout@v6
-      - uses: ruby/setup-ruby@v1
-        with:
-          ruby-version-file: '.tool-versions'
-          bundler-cache: true
-      - name: Setup Node.js for Docker build
+
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version-file: '.tool-versions'
-          cache: "npm"
+          node-version-file: ".tool-versions"
+          cache: npm
           cache-dependency-path: frontend/package-lock.json
-      - name: Install frontend dependencies
-        run: |
-          cd frontend
-          npm ci
-      - name: Build frontend
-        run: |
-          cd frontend
-          npm run build
-      - run: |
-          bundle exec rake
 
-  docker-push:
-    if: ${{ github.ref == 'refs/heads/master' }}
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Check formatting
+        run: npm run format:check
+
+      - name: Audit dependencies
+        run: npm audit --audit-level=moderate
+
+      - name: Run frontend tests
+        run: npm run test:ci
+
+      - name: Build frontend
+        run: npm run build
+
+  docker-test:
+    if: github.event_name == 'push'
     needs:
-      - docker-test
       - hadolint
       - ruby
       - frontend
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v5
+
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version-file: ".tool-versions"
+          bundler-cache: true
+
+      - name: Setup Node.js for Docker smoke test
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: ".tool-versions"
+          cache: npm
+          cache-dependency-path: frontend/package-lock.json
+
+      - name: Install frontend dependencies
+        run: npm ci
+        working-directory: frontend
+
+      - name: Build frontend
+        run: npm run build
+        working-directory: frontend
+
+      - name: Run Docker smoke test
+        run: bundle exec rake
+
+  docker-publish:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+    needs:
+      - docker-test
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -130,19 +125,17 @@ jobs:
       - name: Setup Node.js for Docker build
         uses: actions/setup-node@v4
         with:
-          node-version-file: '.tool-versions'
-          cache: "npm"
+          node-version-file: ".tool-versions"
+          cache: npm
           cache-dependency-path: frontend/package-lock.json
 
       - name: Install frontend dependencies
-        run: |
-          cd frontend
-          npm ci
+        run: npm ci
+        working-directory: frontend
 
       - name: Build frontend
-        run: |
-          cd frontend
-          npm run build
+        run: npm run build
+        working-directory: frontend
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
