happy-ier linters

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,11 +7,15 @@ require:
 AllCops:
   DisplayCopNames: true
   NewCops: enable
+  Exclude:
+    - '**/*.yml'
+    - '**/*.yaml'
+    - '**/.tool-versions'
 
 Metrics/BlockLength:
   Exclude:
     - Rakefile
-  ExcludedMethods:
+  AllowedMethods:
     - route
 
 Naming/RescuedExceptionsVariableName:
