--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,7 @@
     "test:run": "vitest run",
     "test:unit": "vitest run --reporter=verbose --config vitest.unit.config.ts",
     "test:contract": "vitest run --reporter=verbose --config vitest.contract.config.ts",
-    "test:ci": "npm run test:unit && npm run test:contract && npm run test:smoke",
-    "test:smoke": "playwright test"
+    "test:ci": "npm run test:unit && npm run test:contract"
   },
   "dependencies": {
     "@astrojs/preact": "^4.1.1",
@@ -25,7 +24,6 @@
     "tslib": "^2.8.1"
   },
   "devDependencies": {
-    "@playwright/test": "^1.55.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/preact": "^3.2.4",
     "jsdom": "^27.0.0",
