--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -9,10 +9,11 @@ services:
       - ../:/workspace:cached
       - bundle-cache:/usr/local/bundle
     ports:
-      - "3001:3000"
+      - "4000:4000"
     environment:
       - RACK_ENV=development
       - BUNDLE_PATH=/usr/local/bundle
+      - PORT=4000
     command: sleep infinity
     user: vscode
     working_dir: /workspace
